tests/snapshots/parser__decode_osm_pbf_files@examples_t_dump_internal_data.osm.pbf.snap
---
source: tests/parser.rs
expression: result
input_file: tests/fixtures/libosmium/examples_t_dump_internal_data.osm.pbf
---
[
    Skip,
    Skip,
    Skip,
    Skip,
    Create {
        elem: Way,
        id: 701800,
        ts: 1388534400000,
        val: indoc! {r#"
            osmt:test:section "mp-geom";
            osmt:test:id "701";
            osmm:type "w";
            osmm:version "1"^^xsd:integer;
            osmm:user "test";
            osmm:timestamp "2014-01-01 00:00:00 UTC"^^xsd:dateTime;
            osmm:changeset "1"^^xsd:integer.
            osmm:isClosed "false"^^xsd:boolean;
            osmm:loc "Point(1.039999975375831 7.109999995264225)"^^geo:wktLiteral;
        "}#",
    },
    Create {
        elem: Way,
        id: 701801,
        ts: 1388534400000,
        val: indoc! {r#"
            osmt:test:section "mp-geom";
            osmt:test:id "701";
            osmm:type "w";
            osmm:version "1"^^xsd:integer;
            osmm:user "test";
            osmm:timestamp "2014-01-01 00:00:00 UTC"^^xsd:dateTime;
            osmm:changeset "1"^^xsd:integer.
            osmm:isClosed "false"^^xsd:boolean;
            osmm:loc "Point(1.009999970444478 7.139999916376546)"^^geo:wktLiteral;
        "}#",
    },
    Create {
        elem: Relation,
        id: 701900,
        ts: 1388534400000,
        val: indoc! {r#"
            osmt:type "multipolygon";
            osmt:test:section "mp-geom";
            osmt:test:id "701";
            osmt:landuse "forest";
            osmm:type "r";
            osmm:version "1"^^xsd:integer;
            osmm:user "test";
            osmm:timestamp "2014-01-01 00:00:00 UTC"^^xsd:dateTime;
            osmm:changeset "1"^^xsd:integer.
            osmm:has osmway:701800;
            osmway:701800 "outer";
            osmm:has osmway:701801;
            osmway:701801 "outer";
        "}#",
    },
    Create {
        elem: Relation,
        id: 701901,
        ts: 1388534400000,
        val: indoc! {r#"
            osmt:type "multipolygon";
            osmt:landuse "forest";
            osmm:type "r";
            osmm:version "1"^^xsd:integer;
            osmm:user "test";
            osmm:timestamp "2014-01-01 00:00:00 UTC"^^xsd:dateTime;
            osmm:changeset "1"^^xsd:integer.
            osmm:has osmway:701802;
            osmway:701802 "outer";
        "}#",
    },
]
