tests/snapshots/parser__decode_osm_pbf_files@examples_t_location_cache_data-gen.osm.pbf.snap
---
source: tests/parser.rs
expression: result
input_file: tests/fixtures/libosmium/examples_t_location_cache_data-gen.osm.pbf
---
[
    Skip,
    Skip,
    Skip,
    Skip,
]
