tests/snapshots/parser__decode_osm_pbf_files@examples_t_location_cache_way-gen.osm.pbf.snap
---
source: tests/parser.rs
expression: result
input_file: tests/fixtures/libosmium/examples_t_location_cache_way-gen.osm.pbf
---
[
    Create {
        elem: Way,
        id: 20,
        ts: 1388534400000,
        val: indoc! {r#"
            osmt:highway "primary";
            osmm:type "w";
            osmm:version "1"^^xsd:integer;
            osmm:user "test";
            osmm:timestamp "2014-01-01 00:00:00 UTC"^^xsd:dateTime;
            osmm:changeset "1"^^xsd:integer.
            osmm:isClosed "true"^^xsd:boolean;
            osmm:loc "Point(0 0)"^^geo:wktLiteral;
        "}#",
    },
]
